storage/innobase/include/fil0fil.h
@@ -1255,6 +1255,13 @@ fil_system_exit(void);
 /*******************************************************************//**
 Returns the table space by a given id, NULL if not found. */
 fil_space_t*
+fil_space_found_by_id(
+/*==================*/
+	ulint	id);	/*!< in: space id */
+
+/*******************************************************************//**
+Returns the table space by a given id, NULL if not found. */
+fil_space_t*
 fil_space_get_by_id(
 /*================*/
 	ulint	id);	/*!< in: space id */
